@@ -1,3 +1,11 @@
+2001-04-22  John Harper  <jsh@eazel.com>
+
+	* sawfish/wm/viewport.jl (set-viewport): rewrote the code that
+	changes viewports. It now tries to order the window moves in
+	such a way as to minimize redundant pointer in/out and expose
+	events. The ordering algorithm was suggested by Jan Kasprzak
+	<kas@informatics.muni.cz> last September
+
 2001-04-20  John Harper  <jsh@eazel.com>
 
 	* sawfish/wm/state/gnome.jl (gnome-property-handler): monitor
